css/style.css
:root {
	--animate-duration: 1s;
	--animate-delay: 1s;
	--animate-repeat: 1
}

.animate__animated {
	-webkit-animation-duration: 1s;
	animation-duration: 1s;
	-webkit-animation-duration: var(--animate-duration);
	animation-duration: var(--animate-duration);
	-webkit-animation-fill-mode: both;
	animation-fill-mode: both
}

.animate__animated.animate__delay-3s {
	-webkit-animation-delay: 3s;
	animation-delay: 3s;
	-webkit-animation-delay: calc(var(--animate-delay)*3);
	animation-delay: calc(var(--animate-delay)*3)
}

@-webkit-keyframes pulse {
	10% {
		-webkit-transform: scale3d(1.05, 1.05, 1.05);
		transform: scale3d(1.05, 1.05, 1.05)
	}
	25% {
		-webkit-transform: scaleX(1);
		transform: scaleX(1)
	}
	to {
		-webkit-transform: scaleX(1);
		transform: scaleX(1)
	}
}

@keyframes pulse {
	10% {
		-webkit-transform: scale3d(1.05, 1.05, 1.05);
		transform: scale3d(1.05, 1.05, 1.05)
	}
	25% {
		-webkit-transform: scaleX(1);
		transform: scaleX(1)
	}
	to {
		-webkit-transform: scaleX(1);
		transform: scaleX(1)
	}
}

.animate__pulse {
	-webkit-animation-name: pulse;
	animation-name: pulse;
	-webkit-animation-duration: 3s;
	animation-duration: 3s;
	-webkit-animation-timing-function: ease-in-out;
	animation-timing-function: ease-in-out
}

@-webkit-keyframes hinge {
	0% {
		-webkit-animation-timing-function: ease-in-out;
		animation-timing-function: ease-in-out
	}
	20%,
	60% {
		-webkit-transform: rotate(80deg);
		transform: rotate(80deg);
		-webkit-animation-timing-function: ease-in-out;
		animation-timing-function: ease-in-out
	}
	40%,
	80% {
		-webkit-transform: rotate(60deg);
		transform: rotate(60deg);
		-webkit-animation-timing-function: ease-in-out;
		animation-timing-function: ease-in-out;
		opacity: 1
	}
	to {
		-webkit-transform: translate3d(0, 700px, 0);
		transform: translate3d(0, 700px, 0);
		opacity: 0
	}
}

@keyframes hinge {
	0% {
		-webkit-animation-timing-function: ease-in-out;
		animation-timing-function: ease-in-out
	}
	20%,
	60% {
		-webkit-transform: rotate(80deg);
		transform: rotate(80deg);
		-webkit-animation-timing-function: ease-in-out;
		animation-timing-function: ease-in-out
	}
	40%,
	80% {
		-webkit-transform: rotate(60deg);
		transform: rotate(60deg);
		-webkit-animation-timing-function: ease-in-out;
		animation-timing-function: ease-in-out;
		opacity: 1
	}
	to {
		-webkit-transform: translate3d(0, 700px, 0);
		transform: translate3d(0, 700px, 0);
		opacity: 0
	}
}

.animate__hinge {
	-webkit-animation-duration: 2s;
	animation-duration: 2s;
	-webkit-animation-duration: calc(var(--animate-duration)*2);
	animation-duration: calc(var(--animate-duration)*2);
	-webkit-animation-name: hinge;
	animation-name: hinge;
	-webkit-transform-origin: top left;
	transform-origin: top left
}

a {
	text-decoration: none;
}

.header {
	position: sticky;
	position: -webkit-sticky;
	background: #333333ee;
	top: 0;
	z-index: 1;
	display: flex;
	align-items: center;
	width: 100%;
	height: 40px;
}

.header-spacer {
	width: 100%;
}

@media screen and (min-width: 992px) {
	.menu {
		display: none;
	}
	.desktop {
		display: block;
		margin: 10px;
	}
}

.logo {
    min-width: 120px;
    max-width: 208px;
    width: 100%;
}

.header span {
    color: var(--neutral);
    margin-right: 5px;
}

@media screen and (min-width: 992px) {
    .header span:hover {
        color: var(--primary);
    }
}

#splash {
	height: 633px;
	background: url('../images/splash.webp');
	background-position-x: 40%;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	align-items: flex-end;
	position: relative;
	color: #f2f2f2;
	top: -58px;
	width: 100%;
}

#headline {
	display: inline-block;
	animation-fill-mode: backwards;
	text-align: right;
	margin-right: 10px;
}

#headline h1 {
    text-shadow: 2px 2px 3px var(--secondary);
}



#splash-text {
	width: 43vw;
}

a.splash-button {
	width: 200px;
	margin: auto;
	margin-top: 20px;
    -webkit-animation-iteration-count: infinite;
	animation-iteration-count: infinite;
}

.popup {
	display: flex;
	align-items: center;
	align-content: center;
	justify-content: center;
	flex-direction: column;
	height: 100vh;
	color: var(--on-secondary);
	background-color: var(--secondary-light);
    font-size: 48px;
}

.popup a,
.popup a:visited {
    color: var(--neutral);
}

.popup a:active {
    color: var(--primary);
}

.flex40 {
	width: 50%;
	flex-basis: 40%;
}



.short {
	width: 100px;
	border: 2px solid var(--primary);
	margin-top: 10px;
	margin-bottom: 10px;
}

.row {
	display: flex;
	flex-wrap: wrap;
}

@media screen and (min-width: 768px) {
	.row {
		flex-wrap: nowrap;
	}
}

.ohnohoney {
	opacity: 0;
	position: absolute;
	top: 0;
	left: 0;
	height: 0;
	width: 0;
	z-index: -1;
}

form .button {
    float: right;
	margin-right: 3%;
}

.close {
	align-self: flex-end;
    margin-right: 3%;
}

.section-title {
	white-space: nowrap;
	flex-wrap: nowrap;
	padding-top: 40px;
	padding-bottom: 40px;
    padding-left: 15px;
}

.medium {
	margin-left: 15px;
	margin-right: 15px;
	width: 100%;
	border: 2px solid #333;
	box-shadow: 2px 2px 3px #666666;
}

.wot-container {
	display: flex;
	flex-direction: column;
	width: 75vw;
	margin: auto;
}

footer {
	height: 18vh;
	width: 100%;
	background: #333333;
	display: flex;
	padding-left: 10px;
    align-items: center;
}

footer a {
    margin-left: 8px;
    margin-right: 8px;
}   

.fine-print-wrapper {
	width: 25vw;
	height: 87px;
	display: flex;
	flex-direction: column;
	justify-content: space-around;
    align-items: flex-start;
}

.copyright {
	font: 10px var(--font-family-2);
	letter-spacing: 1.5px;
	text-transform: uppercase;
}

.footer-links {
	font: 13px var(--font-family-2);
	letter-spacing: normal;
	width: 25vw;
	list-style-type: none;
}

.footer-links li {
	margin-bottom: 7px;
}

@media screen and (min-width: 992px) {
    .footer-links li:hover {
        color: var(--primary);
    }
}

.footer-right-wrapper {
	width: 50vw;
	text-align: left;
}

.social-media {
	display: flex;
	width: 100%;
}

@media screen and (min-width: 450px) {
    .social-media a {
        margin-right: 5%;
    }
}

.main {
    width: 90%;
    margin: auto;
    margin-top: 60px;
    border-radius: 6px;
    background: var(--neutral-offset);
    border: 2px outset var(--neutral);
    box-shadow: 2px 2px 3px var(--secondary-light);   
}

.post {
    padding: 30px;
}

.post-header {
    display: flex;
}

.title {
    width: 70%;
    border-right: 1px solid var(--secondary-light);
    border-bottom: 1px solid var(--secondary-light);
    height: auto;
    padding: 30px;
}

.meta {
    border-bottom: 1px solid var(--secondary-light);
    width: 30%;
    height: auto;
    padding-top: 30px;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    text-align: right;
}

.author {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    justify-content: space-around;
}

.featured {
    margin-top: 30px;
    width: 100%;
}

.feature-image {
    width: 100%;
    height: auto;
    border-radius: 6px;
    box-shadow: 2px 2px 3px var(--secondary-light);
}

.body-text a {
    color: var(--primary-dark);
    text-decoration: underline;
}

@media screen and (min-width: 992px) {
    .body-text a:hover {
        color: var(--primary);
    }
}

.icon-container {
    display: flex;
    align-items: flex-end;
    justify-content: flex-end;
    margin-top: 30px;
    width: 100%;
    text-align: right;
}

.summary {
    flex-direction: column;
    height: auto;
    border: 1px solid var(--secondary-light);
    margin: 1%;
    width: 98%;
    border-radius: 6px;
}

.summary h4 {
    margin: 3%;
}

.summary-byline {
    width: 40%;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 3%;
}
.summary-date {
    text-align: right;
    padding-right: 20px;
    border-right: 2px solid var(--secondary-light);
}

.blog-author {
    border-radius: 50%;
}

.summary-author {
    display: flex;
    align-items: center;
}

.summary-author .blog-author {
    margin-left: 5%;
    margin-right: 5%;
}

.summary-image {
    border-radius: 6px;
    width: 70%;
}

.summary p {
    width: 75%;
    margin: 3%;
}

.summary .button {
    border: 1px solid var(--secondary-light);
    align-self: flex-end;
    margin-right: 3%;
}
.crack {
    position: absolute;
    top: 70px;
    left: -150px;
    display: none;
}

